--- a/source/_posts/2022/「博客」网站文章排版.md
+++ b/source/_posts/2022/「博客」网站文章排版.md
@@ -208,5 +208,86 @@ cover: https://s2.loli.net/2022/07/04/Iq7dksrUglfaLbi.jpg
 
   {% btn 'https://minge.live/2022/「博客」网站文章排版',[「博客」网站文章排版 | Minge],far fa-hand-point-right,block outline right blue larger %}
 
-## 
+## <center>表格
 
+- Markdown格式
+
+  ~~~markdown
+  |项目一|项目二|项目三|
+  ~~~
+
+- ***「Typora」***快捷键：`「Ctrl」+「T」`
+
+  | 项目一 | 项目二 | 项目三 |
+  | ------ | ------ | ------ |
+  |        |        |        |
+
+## <center>笔记
+
+- 格式：
+
+  ~~~html
+  {% note blue 'fas fa-bullhorn' simple %}内容{%endnote%}
+  ~~~
+
+- 效果：{% note blue 'fas fa-bullhorn' simple %}内容{%endnote%}
+
+- ***「笔记」***用于文首分割线之上，同一行不能同时出现***「有色文字」***和***「代码」***
+
+
+## <center>隐藏内容
+
+- 格式：
+
+  ~~~html
+  {%hideToggle 点击展开%}隐藏内容{%endhideToggle%}
+  ~~~
+
+- 效果：{%hideToggle 点击展开%}隐藏内容{%endhideToggle%}
+
+- ***「隐藏内容」***用于放置详细内容，如：表格、图片
+
+---
+
+# <center>图片
+
+- 对大图缩小处理
+
+- 采用网络图片形式，从网站复制图片链接到***「Typora」***，***「Typora」***通过***「PicGo」***自动上传至个人图床
+
+  ~~~markdown
+  <img src="https://s2.loli.net/2022/07/04/osWFcXfGNBMYvjV.jpg" style="zoom: 30%;" />
+  ~~~
+
+  
+
+  <img src="https://s2.loli.net/2022/07/04/osWFcXfGNBMYvjV.jpg" style="zoom: 30%;" />
+
+---
+
+# <center>代码
+
+## <center>代码块
+
+- ***「MarkDown」***格式：
+
+  ~~~~MarkDown
+  ~~~MarkDown
+  这是一个MarkDown代码块
+  ~~~
+  ~~~~
+
+- 效果：
+
+  ~~~MarkDown
+  这是一个MarkDown代码块
+  ~~~
+
+- ***「Typora」***快捷键：`「Ctrl」+「Shift」+「K」`
+
+## <center>代码
+
+- ***「MarkDown」***格式：``目录/代码/快捷键``
+- ***「Typora」***快捷键：``「Ctrl」+「Shift」+「`」``
+- ***「代码」***中若已包含``「`」``，每边各需要用两个``「`」``
+- ***「代码」***用于：目录、代码、快捷键
