--- a/source/_posts/2022/「博客」文章排版.md
+++ b/source/_posts/2022/「博客」文章排版.md
@@ -247,6 +247,33 @@ cover: https://s2.loli.net/2022/07/05/RDBuPMhncdKzb2r.jpg
 
 - ***「隐藏内容」***用于放置详细内容，如：表格、图片
 
+
+## <center>时间线
+
+- 格式
+
+  ~~~markdown
+  {% timeline 2022 %}
+  
+  <!-- timeline 2022年07月03日 -->
+  
+  第一次配置
+  
+  <!-- endtimeline -->
+  
+  <!-- timeline 2022年07月05日 -->
+  
+  - 改默认生成文章为草稿
+  - 改主页文章排版顺序为修改日期
+  - 同步创建与文章同名的资源文件夹
+  
+  <!-- endtimeline -->
+  
+  {% endtimeline %}
+  ~~~
+
+  用于配置文件更改记录
+
 ---
 
 # <center>图片
