--- a/source/_posts/2022/「博客」文章排版.md
+++ b/source/_posts/2022/「博客」文章排版.md
@@ -201,12 +201,12 @@ cover: https://s2.loli.net/2022/07/05/RDBuPMhncdKzb2r.jpg
 - `''`中放置链接，`「」`用`[]`替代，并放置链接说明
 
   ~~~markdown
-  {% btn 'https://minge.live/2022/「博客」网站文章排版',[「博客」网站文章排版 | Minge],far fa-hand-point-right,block outline right blue larger %}
+  {% btn 'https://minge.live/2022/「博客」文章排版',[「博客」文章排版 | Minge],far fa-hand-point-right,block outline right blue larger %}
   ~~~
 
   效果
 
-  {% btn 'https://minge.live/2022/「博客」网站文章排版',[「博客」网站文章排版 | Minge],far fa-hand-point-right,block outline right blue larger %}
+  {% btn 'https://minge.live/2022/「博客」文章排版',[「博客」文章排版 | Minge],far fa-hand-point-right,block outline right blue larger %}
 
 ## <center>表格
 
