--- a/source/_posts/2022/「博客」文章排版.md
+++ b/source/_posts/2022/「博客」文章排版.md
@@ -317,4 +317,34 @@ cover: https://s2.loli.net/2022/07/05/RDBuPMhncdKzb2r.jpg
 - ***「代码」***中若已包含``「`」``，每边各需要用两个``「`」``
 - ***「代码」***用于：目录、代码、快捷键
 
+## <center>数学公式
+
+- ***「Typora」***快捷键：``「Ctrl」+「Shift」+「M」``
+
+- 角标
+
+  ~~~
+  $$
+  ⌀18g7(^{-0.006}_{-0.017})
+  $$
+  ~~~
+
+  $$
+  ⌀18g7(^{-0.006}_{-0.017})
+  $$
+
+- 分数
+
+  ~~~
+  $$
+  ⌀120\frac{H7}{g6}
+  $$
+  ~~~
+
+  $$
+  ⌀120\frac{H7}{g6}
+  $$
+
+  {% btn 'https://blog.csdn.net/mingzhuo_126/article/details/82722455',[使用Typora添加数学公式_姚明明的博客-CSDN博客_typora公式],far fa-hand-point-right,block outline right blue larger %}
+
 ---
