--- a/source/_posts/2022/「机械」尺寸公差与配合.md
+++ b/source/_posts/2022/「机械」尺寸公差与配合.md
@@ -1,6 +1,6 @@
 ---
 title: 「机械」尺寸公差与配合
-tags: 尺寸
+tags: 尺寸公差
 categories: 机械
 mathjax: true
 cover: https://s2.loli.net/2022/07/22/7bDXkEyNSemx5Ui.jpg
