--- a/source/_posts/2022/「机械」常见机械加工方法.md
+++ b/source/_posts/2022/「机械」常见机械加工方法.md
@@ -10,7 +10,11 @@ date: 2022-07-23 13:15:30
 
 ---
 
-{% btn 'https://www.163.com/dy/article/G0T0QVRD0511CDL7.html#:~:text=传统的机械加工方,铣、刨、磨这些。',[盘点7种常见机械加工方式方法，一起来看一下吧！|刀具|工件|铣刀|砂轮|铣削_网易订阅 (163.com)],far fa-hand-point-right,block outline right blue larger %}
+
+
+{% btn 'https://www.163.com/dy/article/G0T0QVRD0511CDL7.html#:~:text',[盘点7种常见机械加工方式方法，一起来看一下吧！|刀具|工件|铣刀|砂轮|铣削_网易订阅 (163.com)],far fa-hand-point-right,block outline right blue larger %}
+
+
 
 {% btn 'https://zhuanlan.zhihu.com/p/285047489',[车、铣、刨、磨、钻、镗所能达到的最高加工精度全在这里 - 知乎 (zhihu.com)],far fa-hand-point-right,block outline right blue larger %}
 
