--- a/source/_posts/2022/「机械」常见机械加工方法.md
+++ b/source/_posts/2022/「机械」常见机械加工方法.md
@@ -76,7 +76,7 @@ date: 2022-07-23 13:15:30
 
 ![](https://s2.loli.net/2022/07/23/KScpREBdtmiUJ1f.gif)
 
-- 是一种用镗杆（通常为单刃镗刀）扩大孔或其他圆形轮廓的内径切削工艺
+- ***「镗削」***是一种用镗杆（通常为单刃镗刀）扩大孔或其他圆形轮廓的内径切削工艺
 -  ***「半粗加工」***到***「精加工」***
 
 ---
