--- a/source/_posts/2022/「机械」常见机械加工方法.md
+++ b/source/_posts/2022/「机械」常见机械加工方法.md
@@ -26,7 +26,7 @@ date: 2022-07-23 13:15:30
 
 - 工件转动，车刀直线或曲线运动将工件切削成要求的形状
 - 可以得到***「内、外圆柱面」、「锥面」、「旋转曲面（采用成型车刀，横向进给）」、「螺纹面」、「端平面」、「偏心轴」***
-- 车削加工精度一般为***「IT8~IT7」***，表面粗糙度为***「1.6~0.8μm」***
+- ***「车削」***加工精度一般为***「IT8~IT7」***，表面粗糙度为***「1.6~0.8μm」***
 
 ---
 
@@ -39,7 +39,7 @@ date: 2022-07-23 13:15:30
 - ***「卧铣」***铣削的平面由铣刀外圆面上的刃形成，多用于***「齿轮」、「花键」、「开槽」、「切割」***
 - ***「立铣」***铣削的平面由铣刀的端面刃形成，多用于***「平面」、「斜面」、「沟槽」、「孔」***，平面有高低曲直几何形状的工件
 - ***「卧式铣床」+「立铣头」***的方式，当立铣用
-- 铣削加工精度一般为***「IT8~IT7」***，表面粗糙度为***「6.3~1.6μm」***
+- ***「铣削」***加工精度一般为***「IT8~IT7」***，表面粗糙度为***「6.3~1.6μm」***
 
 ---
 
@@ -50,7 +50,7 @@ date: 2022-07-23 13:15:30
 - 毛坯固定，刀具做往复直线运动对工件进行切削
 - 用于零件的外形加工
 - 速度低、生产率低，但精度和粗糙度较铣削平稳
-- 刨削加工精度一般为***「IT9~IT7」***，表面粗糙度为***「6.3~1.6μm」***
+- ***「刨削」***加工精度一般为***「IT9~IT7」***，表面粗糙度为***「6.3~1.6μm」***
 
 ---
 
@@ -59,7 +59,7 @@ date: 2022-07-23 13:15:30
 ![](https://s2.loli.net/2022/07/23/ie6j3Tdg1kb2UIc.gif)
 
 - 砂轮和磨具旋转对工件进行加工
-- 磨削加工精度一般为***「IT8~IT5」***，表面粗糙度为***「1.25~0.16μm」***，通常用于***「精加工」***和***「半精加工」***
+- ***「磨削」***加工精度一般为***「IT8~IT5」***，表面粗糙度为***「1.25~0.16μm」***，通常用于***「精加工」***和***「半精加工」***
 
 ---
 
@@ -68,7 +68,7 @@ date: 2022-07-23 13:15:30
 ![](https://s2.loli.net/2022/07/23/y6RrtjY8Ob3gXfx.gif)
 
 - 钻孔经常在钻床和车床上进行，也可在镗床或铣床上进行
-- 加工精度低，一般只能达到***「IT10」***，表面粗糙度为***「12.5~6.3μm」***，在钻削后常常采用扩孔和铰孔来进行***「精加工」***和***「半精加工」***
+- ***「钻削」***加工精度低，一般只能达到***「IT10」***，表面粗糙度为***「12.5~6.3μm」***，在钻削后常常采用扩孔和铰孔来进行***「精加工」***和***「半精加工」***
 
 ---
 
